--- a/web/index.html
+++ b/web/index.html
@@ -31,6 +31,8 @@
 
   <title>cctv_kota_medan_v2</title>
   <link rel="manifest" href="manifest.json">
+
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVGzlUgsBQDwVAtH92lBlnKzCWyKYSnUg"></script>
 </head>
 <body>
   <script src="flutter_bootstrap.js" async></script>
